--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "lucide-react": "^0.468.0",
     "next": "^15.1.0",
+    "posthog-js": "^1.202.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.0"
